[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lightvllm"
version = "0.0.1"
description = "A lightweight implementation of vLLM"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["lightvllm*"]
exclude = ["lightvllm.test*"]
